syntax = "proto3";

package image;

message Image {
  // default field
  int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string deletedAt = 4;
  optional int32 createdBy = 5;
  optional int32 updatedBy = 6;
  optional int32 deletedBy = 7;

  // reserved field
  optional string description = 8;
}